Se sube cambio para función slider

--- a/index.html
+++ b/index.html
@@ -443,29 +443,26 @@
 							<!-- Vertical Slider -->
 							<div class="politica_slider owl-carousel owl-theme owl-height">
 								<!-- Vertical Slider Item -->
-								<div class="politica_item">
+								<div class="politica_item" data-id="0">
 									<p>Se requiere contar con un <strong>marco legal</strong> nacional y sanciones administrativas para su
 										efectivo cumplimiento.</p>
 								</div>
-								<div class="politica_item">
+								<div class="politica_item" data-id="1">
 									<p>Los gobiernos deberían promover <strong>campañas informativas y de sensibilización</strong> que sitúen el
 										problema con toda su relevancia y que contribuyan a cambiar los roles y estereotipos de género que avalan el
 										acoso sexual.</p>
 								</div>
-								<div class="politica_item">
+								<div class="politica_item" data-id="2">
 									<p>Promover cambios en la <strong>cultura laboral</strong>, involucrando al conjunto de colaboradores.</p>
 								</div>
-								<div class="politica_item">
-									<p>En la empresa, es necesario contar con el apoyo del equipo directivo, crear una <strong>política expresa
-											contra el acoso sexual</strong> e integrar la cuestión en todos los niveles jerárquicos y organizativos; la
-										negociación colectiva es el espacio adecuado para establecer los procedimientos y protocolos, los canales de
-										comunicación, las sanciones y las responsabilidades.</p>
+								<div class="politica_item" data-id="3">
+									<p>En la empresa, es necesario contar con el apoyo del equipo directivo, crear una <strong>política expresa contra el acoso sexual</strong> e integrar la cuestión en todos los niveles jerárquicos y organizativos; la negociación colectiva es el espacio adecuado para establecer los procedimientos y protocolos, los canales de comunicación, las sanciones y las responsabilidades.</p>
 								</div>
-								<div class="politica_item">
+								<div class="politica_item" data-id="4">
 									<p>Las políticas sobre acoso sexual deberían ser parte de las <strong>políticas de igualdad de oportunidades</strong>
 										y de las <strong>políticas de salud y seguridad en el trabajo.</strong></p>
 								</div>
-								<div class="politica_item">
+								<div class="politica_item" data-id="5">
 									<p>Las <strong>políticas de prevención</strong> deben incorporar estrategias para trabajar con hombres la
 										construcción de la masculinidad patriarcal y su relación con ciertas conductas que pueden calificarse de
 										acoso sexual.</p>
