--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
 					<div class="col-lg-5 text-lg-right text-center">
 						<div class="text_line_image">
-							<img src="images/prevencion_acoso.png" alt="">
+							<img src="images/imagen_referente_0.png" alt="">
 						</div>
 					</div>
 
