Últimos cambios para la web

--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
 					<div class="owl-item hero_slider_item item_1 d-flex flex-column align-items-center justify-content-center">
 						<img src="images/cover.jpg" alt="">
 					</div>
-
+					<!-- Slider Item -->
+					<div class="owl-item hero_slider_item item_1 d-flex flex-column align-items-center justify-content-center">
+						<img src="images/cover_2.jpg" alt="">
+					</div>
+					<!-- Slider Item -->
+					<div class="owl-item hero_slider_item item_1 d-flex flex-column align-items-center justify-content-center">
+						<img src="images/cover_3.jpg" alt="">
+					</div>
 				</div>
 
 			</div>
@@ -456,7 +463,10 @@
 									<p>Promover cambios en la <strong>cultura laboral</strong>, involucrando al conjunto de colaboradores.</p>
 								</div>
 								<div class="politica_item" data-id="3">
-									<p>En la empresa, es necesario contar con el apoyo del equipo directivo, crear una <strong>política expresa contra el acoso sexual</strong> e integrar la cuestión en todos los niveles jerárquicos y organizativos; la negociación colectiva es el espacio adecuado para establecer los procedimientos y protocolos, los canales de comunicación, las sanciones y las responsabilidades.</p>
+									<p>En la empresa, es necesario contar con el apoyo del equipo directivo, crear una <strong>política expresa
+											contra el acoso sexual</strong> e integrar la cuestión en todos los niveles jerárquicos y organizativos; la
+										negociación colectiva es el espacio adecuado para establecer los procedimientos y protocolos, los canales de
+										comunicación, las sanciones y las responsabilidades.</p>
 								</div>
 								<div class="politica_item" data-id="4">
 									<p>Las políticas sobre acoso sexual deberían ser parte de las <strong>políticas de igualdad de oportunidades</strong>
@@ -619,20 +629,32 @@
 					<!-- Modal body -->
 					<div class="modal-body">
 						<ul>
-							<li><strong>Temor a hablar de lo ocurrido:</strong> la sexualidad humana sigue siendo un tema tabú del que no se quiere hablar ni reflexionar.</li>
-							<li><strong>Temor a ser victimizada:</strong> por negligencia, indiferencia, torpeza de quien recibe la demanda o denuncia.</li>
-							<li><strong>Temor a la crítica de los compañeros de trabajo:</strong> presión de sus superiores y compañeros y compañeras de trabajo por presentar la queja interna o denuncia judicial.</li>
-							<li><strong>Desconocimiento de derechos:</strong> desconocimiento o inciertas referencias de los procedimientos que se deben seguir.</li>
-							<li><strong>Temor a no encontrar medios probatorios:</strong> dificultades probatorias y eventual costo alto de los trámites ulteriores.</li>
+							<li><strong>Temor a hablar de lo ocurrido:</strong> la sexualidad humana sigue siendo un tema tabú del que no se
+								quiere hablar ni reflexionar.</li>
+							<li><strong>Temor a ser victimizada:</strong> por negligencia, indiferencia, torpeza de quien recibe la demanda
+								o denuncia.</li>
+							<li><strong>Temor a la crítica de los compañeros de trabajo:</strong> presión de sus superiores y compañeros y
+								compañeras de trabajo por presentar la queja interna o denuncia judicial.</li>
+							<li><strong>Desconocimiento de derechos:</strong> desconocimiento o inciertas referencias de los procedimientos
+								que se deben seguir.</li>
+							<li><strong>Temor a no encontrar medios probatorios:</strong> dificultades probatorias y eventual costo alto de
+								los trámites ulteriores.</li>
 							<li><strong>Desconfianza</strong> en los mecanismos, por desconocimiento o desprestigio de estos.</li>
-							<li><strong>Temor a la no confidencialidad ni reserva del hecho:</strong> publicidad de los sucesos en el lugar de trabajo, que expone la intimidad de quien ha sido objeto de acoso.</li>
+							<li><strong>Temor a la no confidencialidad ni reserva del hecho:</strong> publicidad de los sucesos en el lugar
+								de trabajo, que expone la intimidad de quien ha sido objeto de acoso.</li>
 							<li><strong>La mala interpretación:</strong> haber interpretado mal los hechos ocurridos.</li>
-							<li><strong>Culpabilidad:</strong> se sienten culpables y se preguntan si no propiciaron el acoso sexual por la forma amable de relacionarse o por la vestimenta, actitudes, etc.</li>
-							<li><strong>La incomprensión del hecho:</strong> no haber comprendido o interpretado erróneamente el límite de la tolerancia entre la torpeza y el acoso sexual.</li>
-							<li><strong>La relación con quien acosa:</strong> precisar la situación actual cuando hubo alguna relación anterior con quien acosa.</li>
-							<li><strong>El temor a las represalias:</strong> tanto las represalias abiertas o encubiertas, incluso a que haya más acoso.</li>
-							<li><strong>Pérdida de oportunidad:</strong> pérdida de condiciones laborales, obstáculos futuros para ascensos o el despido.</li>
-							<li><strong>Pérdida de derechos:</strong> negación, peligro, afectación o pérdida de derechos adquiridos o en expectativa.</li>
+							<li><strong>Culpabilidad:</strong> se sienten culpables y se preguntan si no propiciaron el acoso sexual por la
+								forma amable de relacionarse o por la vestimenta, actitudes, etc.</li>
+							<li><strong>La incomprensión del hecho:</strong> no haber comprendido o interpretado erróneamente el límite de
+								la tolerancia entre la torpeza y el acoso sexual.</li>
+							<li><strong>La relación con quien acosa:</strong> precisar la situación actual cuando hubo alguna relación
+								anterior con quien acosa.</li>
+							<li><strong>El temor a las represalias:</strong> tanto las represalias abiertas o encubiertas, incluso a que
+								haya más acoso.</li>
+							<li><strong>Pérdida de oportunidad:</strong> pérdida de condiciones laborales, obstáculos futuros para ascensos
+								o el despido.</li>
+							<li><strong>Pérdida de derechos:</strong> negación, peligro, afectación o pérdida de derechos adquiridos o en
+								expectativa.</li>
 						</ul>
 						</p>
 					</div>
