--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="es">
 
 <head>
-	<title>Alto Al Acoso - Liderman</title>
+	<title>No Al Acoso - Liderman</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Alto Al Acoso">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-	 crossorigin="anonymous">
 	<link href="plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
@@ -19,6 +17,12 @@
 	<link href="plugins/icon-font/styles.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 	<link rel="stylesheet" type="text/css" href="styles/responsive.css">
+	<!-- FacebookMetaTag -->
+	<meta property="og:url" content="http://mundoliderman.com/noalacoso/" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="No Al Acoso" />
+	<meta property="og:description" content="Si tienes una consulta o deseas realizar una denuncia anónima escríbenos a: noalacoso@liderman.com.pe" />
+	<meta property="og:image" content="http://mundoliderman.com/noalacoso/images/noalacoso_default.jpg" />
 </head>
 
 <body>
